--- a/pages/common/style/table.module.css
+++ b/pages/common/style/table.module.css
@@ -1,15 +1,26 @@
 .table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
+  border-collapse: separate;
+  border-spacing: 1px;
+  text-align: center;
+  line-height: 1.5;
+  margin: 20px 10px;
   }
-  
   .td {
-    border: 1px solid rgb(97, 5, 255);
-    text-align: left;
-    padding: 8px;
+    border:1px solid rgb(168, 11, 199);
   }
-  
   .tr {
-    border: 1px solid rgb(0, 0, 0);
+    width: 150px;
+    padding: 10px;
+    font-weight: bold;
+    vertical-align: top;
+    border-bottom: 1px solid #ccc;
+    background: #F3F6F7;
+  }
+  .th {
+    width: 155px;
+    padding: 10px;
+    font-weight: bold;
+    vertical-align: top;
+    color: #fff;
+    background: #d500d1 ;
   }
